[package]
name = "gpt-macro"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[features]
default = []

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }
proc-macro2 = { version = "1.0", features = ["nightly"] }
quote = "1.0"
async-openai = "0.30.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
